[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/screens/start_up_internet_checker/internet_checker.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/no-wifi.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=4]



[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_msg" type="ColorRect" parent="ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -200.0
margin_right = 250.0
margin_bottom = 200.0
color = Color( 0.184314, 0.443137, 0.745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/error_msg"]
position = Vector2( 252.308, 85.167 )
scale = Vector2( 0.294, 0.294 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="ColorRect/error_msg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -22.0
margin_right = 191.5
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "No Internet Connection"

[node name="Button" type="Button" parent="ColorRect/error_msg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 63.8333
margin_right = 99.0
margin_bottom = 147.833
theme = ExtResource( 4 )
text = "Try Again"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="ColorRect/error_msg/Button" to="." method="_on_Button_button_up"]
